<resources>
    <string name="app_name">Mysen</string>
    <string name="login">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="in">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="forget">Я забыл пароль</string>
    <string name="login_r">Придумайте логин</string>
    <string name="password_r">Придумайте пароль</string>
    <string name="password_n">Новый пароль</string>
    <string name="password_r_r">Повторите пароль</string>
    <string name="mail_r">Введите почту</string>
    <string name="mail_r_h">если вы забудете пароль, то на почту придет код для восстановления</string>
    <string name="dalee">Далее</string>
    <string name="save">Сохранить</string>
    <string name="vvedite_kod">Введите код</string>
    <string name="transit_logo">chivapchichi</string>
    <string name="exit">Выйти</string>
    <string name="exit_delete">Выйти и удалить аккаунт</string>
    <string name="add">Добавить датчик</string>
    <string name="back">Назад</string>
    <string name="id">Номер датчика</string>
    <string name="name">Название датчика</string>
    <string name="change">Изменить пароль</string>
    <string name="change_m">Изменить почту</string>
    <string name="message_exit">Вы точно хотите выйти?</string>
    <string name="message_exit_delete">Вы точно хотите выйти и удалить аккаунт?</string>
    <string name="message_change_password">Вы точно хотите изменить пароль?</string>
    <string name="message_change_mail">Вы точно хотите изменить почту?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <!--    Toast messages    -->
    <string name="does_not_exist_sensor">Сенсора с таким номером не существует</string>
    <string name="message_delete_sensor">Вы точно хотите удалить сенсор?</string>
    <!--    Errors    -->
    <string name="nobody_knows">Произошла ошибка, задите снова</string>
    <string name="no_sensor">Такого сенсора нет</string>

    <string name="downloading">downloading</string>
    <string name="domen">350e-178-72-70-172.ngrok.io</string>
<!--    <string name="domen">watersensors.herokuapp.com</string>-->
</resources>