<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Enter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_r"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/login_r"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/mail_r"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/mail_r"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:id="@+id/mail_r_h"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginBottom="2dp"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:text="@string/mail_r_h"
            android:textColor="#000000"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password_r"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password_r_r"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/reg"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/round_button"
            android:onClick="registrate_new_user"
            android:text="@string/registration"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>