<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Enter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/enter"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/round_button"
            android:onClick="enter"
            android:text="@string/in"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/registration"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button_gray"
            android:text="@string/registration"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>