<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password_n"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/new_password_repeat"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/password_r_r"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="190dp"
            android:background="@drawable/round_button"
            android:onClick="save_new_password"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>