<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="100"
            android:fontFamily="@font/allerta"
            android:gravity="start|center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:onClick="back"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/sensor_id"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/add_style"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/name_sensor"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/add_style"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/add_sensor"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/round_button"
                android:onClick="add_new_sensor_to_user"
                android:text="@string/save"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>