<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Change2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:onClick="next_change"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_c"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/next_c"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="240dp"
            android:background="@drawable/round_button"
            android:onClick="next_change"
            android:text="@string/dalee"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>